Finish project commit.

--- a/README.me
+++ b/README.me
@@ -1,1 +1,2 @@
-![readme img](readme_img.png)
+Run main.py for live camera calibration.
+Run static_images_calibration.py for basic, static camera calibration.
