--- a/README.me
+++ b/README.me
@@ -1,2 +1,14 @@
+## Welcome to chessboard camera calibration project
+
+This project provides users with ability to use chessboard camera calibration method.
+
+There are two ways of camera calibration
+*Static camera calibration
+*Live camera calibration
+
+## Static camera calibration  
+
+
+
 Run main.py for live camera calibration.
 Run static_images_calibration.py for basic, static camera calibration.
